added mesh unit to html

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                           <div>
                               <label for="atRouter">Manged Router? ($6.99/Month)</label>
                               <input type="checkbox" id="atRouter" name="atRouter" autocomplete="off"><br>
-                              <label for="atMesh">Manged Router? ($6.99/Month)</label>
+                              <label for="atMesh">Mesh Unit? ($3.99/Month)</label>
                               <input type="checkbox" id="atMesh" name="atMesh" autocomplete="off"><br>
                               <br><br>
                               <bold style="font-weight: bold;"> TriPod Options:</bold> <br><br>
