made upgrade request panda doc option a ncheckbox instead of textbox

--- a/index.html
+++ b/index.html
@@ -144,37 +144,7 @@
                       <option value="Next100">Next100</option>
 
                   </select>
-<!-- 
 
-
-                  <select id="M2MPlanType" class="dropdown planType">
-                      <option value="">-- Month to Month Pricing --</option>
-                      <option value="Next10">Next10 $59.95</option>
-                      <option value="Next15">Next15 $69.95</option>
-                      <option value="Next20">Next20 $79.95</option>
-                      <option value="Next25">Next25 $89.95</option>
-                      <option value="Next35">Next35 $99.95</option>
-                      <option value="Next50">Next50 $119.95</option>
-                      <option value="Next100">Next100 $139.95</option>
-
-
-
-                  </select>
-
-
-
-                  <select id="HUBBPlanType" class="dropdown planType">
-                      <option value="">-- HUBB Pricing --</option>
-                      <option value="Next10">Next10 $59.95</option>
-                      <option value="Next15">Next15 $69.95</option>
-                      <option value="Next20">Next20 $79.95</option>
-                      <option value="Next25">Next25 $89.95</option>
-                      <option value="Next35">Next35 $99.95</option>
-                      <option value="Next50">Next50 $109.95</option>
-                      <option value="Next100">Next100 $119.95</option>
-
-                  </select>
- -->
 
                   <div>
                       <label for="atACP">ACP Eligible?</label>
@@ -616,8 +586,10 @@
             <input type="text" id='urCurrPlan' placeholder="Current Plan?" name="" class="mainInputBox" autocomplete="off">
             <input type="text" id='urNewPlan' placeholder="New Plan?" name="" class="mainInputBox2" autocomplete="off">
 
-            <input type="text" id='urSupportTick' placeholder="Support Ticket?" name="" class="mainInputBox" autocomplete="off">
-            <input type="text" id='urPanda' placeholder="Signed PandaDoc?" name="" class="mainInputBox2" autocomplete="off">
+            <input type="text" id='urSupportTick' placeholder="Support Ticket?" name="" class="textboxInput" autocomplete="off">
+            <label for="urPanda">Signed PandaDoc?</label>
+            <input type="checkbox" id='urPanda' placeholder="Signed PandaDoc?" name=""  autocomplete="off">
+            <br><br>
 
             </select>
 
