--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             <input type="text" id='urCurrPlan' placeholder="Current Plan?" name="" class="mainInputBox" autocomplete="off">
             <input type="text" id='urNewPlan' placeholder="New Plan?" name="" class="mainInputBox2" autocomplete="off">
 
-            <input type="text" id='urSupportTick' placeholder="Support Ticket?" name="" class="textboxInput" autocomplete="off">
+            <input type="number" id='srCallId' placeholder="UJET Call Id (required), numbers only" required name="" class="textboxInput" autocomplete="off">
             <label for="urPanda">Signed PandaDoc?</label>
             <input type="checkbox" id='urPanda' placeholder="Signed PandaDoc?" name=""  autocomplete="off">
             <br><br>
