updated links to team book

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <button class="tablinks buttonMenu" onclick="openTab(event, 'callCenter')" id="defaultOpen"><i class="fas fa-phone-volume"></i> Call Center <br>Ticket</button>
       <button class="tablinks buttonMenu" onclick="openTab(event, 'supervisorTicket')" id="defaultOpen"><i class="fas fa-exclamation-circle"></i>  Supervisor Request Ticket</button>
       <button class="tablinks buttonMenu" onclick="openTab(event, 'upgradeRequest')" id="defaultOpen"><i class="fas fa-phone"></i> Upgrade Requests</button>
-      <a style="color: white;" href="https://nxlink.sharepoint.com/teams/sales/_layouts/15/Doc.aspx?sourcedoc={616e24cd-5ac8-4cd0-829a-1513aa8e255b}&action=view&wd=target%28Office%20Knowledge.one%7C210e89de-b4df-4ae4-9732-84ff29075814%2F%29&wdorigin=717"
+      <a style="color: white;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Training%20and%20Refreshers.one%7C3d05c490-2472-4f09-9670-b25b2467fc09%2FHow%20Our%20Internet%20Works%7Cc98f0e8d-898a-4570-9046-02aaa88fda4f%2F%29&wdorigin=NavigationUrl"
         target=”_blank”><button class="tablinks buttonMenu"><i class="fas fa-binoculars"></i> Team Notebook</button></a>
 
       <!-- <button class="tablinks buttonMenu" onclick="openTab(event, 'dispatchTicket')" id="defaultOpen"><i class="fas fa-headset"></i>  Dispatch Ticket</button>
@@ -267,7 +267,7 @@
                                   <label for="installTimePM"> 1:00 PM -5:00 PM</label> <br><br>
 
                           </label>
-                          Please click <a style="color: #99e6ff;" href="https://nxlink.sharepoint.com/teams/sales/_layouts/15/Doc.aspx?sourcedoc={616e24cd-5ac8-4cd0-829a-1513aa8e255b}&action=view&wd=target%28Sales%20Process.one%7C1bd9a0c5-f167-431a-934f-055d6ef50ea9%2FGuidelines%20for%20Scheduling%7Caf95d0a6-6bf6-48fa-9c52-3dc27d857e38%2F%29">Scheduling Guidelines</a> for more information. <br><br>
+                          Please click <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28ASAP%20Tips%21.one%7C9b8e90e1-d074-4635-a30e-74480b75fa8c%2F%29&wdorigin=717">Scheduling Guidelines</a> for more information. <br><br>
 
                           Expectations:
                           <ul>
@@ -443,14 +443,14 @@
         </fieldset><br>
         <fieldset>
             Reminders:<br><br><br>
-            Please refer to <a style="color: #99e6ff;" href="https://nxlink.sharepoint.com/teams/sales/_layouts/15/Doc.aspx?sourcedoc={616e24cd-5ac8-4cd0-829a-1513aa8e255b}&action=view&wd=target%28VoIP-Billing-Support.one%7Cf47e653a-b5c5-407b-bf1e-d8fd035eef13%2FBilling%7C54cfda7b-a032-441d-b0f2-2d076ced8577%2F%29">Team Book > Billing</a> for the most up to date information<br><br>
+            Please refer to <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl">Team Book > Billing</a> for the most up to date information<br><br>
 
             <li> Billing Hours: Monday-Friday, 8AM-6PM</li><br>
             <li>Site Survey Fee's are $70 + tax</li><br>
 
             <li>Assign tickets to Round Robin</li><br>
             <li>
-                If there will be lapse in service due to moving, please include relevant dates in notes.  Please refer to <a style="color: #99e6ff;" href="https://nxlink.sharepoint.com/teams/sales/_layouts/15/Doc.aspx?sourcedoc={616e24cd-5ac8-4cd0-829a-1513aa8e255b}&action=view&wd=target%28Sales%20Process.one%7C1bd9a0c5-f167-431a-934f-055d6ef50ea9%2FMoves%7C8f62f845-4351-4f09-82f8-119683481416%2F%29">Team Book > Moves</a> for more information<br><br>
+                If there will be lapse in service due to moving, please include relevant dates in notes.  Please refer to <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl">Team Book > Moves</a> for more information<br><br>
             </li>
 
             <br><br>
@@ -827,8 +827,8 @@
 
                   <ul>
 
-                      <li> For the most up to date procedures, please check the Team Book <a style="color: #99e6ff;" href="https://nxlink.sharepoint.com/teams/sales/_layouts/15/Doc.aspx?sourcedoc={616e24cd-5ac8-4cd0-829a-1513aa8e255b}&action=view&wd=target%28Ticket%20Templates.one%7C19894b19-d036-4b3e-a670-8bdffdc69e16%2FResidential%20Site%20Survey%7Ca4767515-a6df-40f2-91d7-55a643d98469%2F%29">Residential Site Survey</a>
-                      <li> Click <a style="color: #99e6ff;" href="https://nxlink.sharepoint.com/teams/sales/_layouts/15/Doc.aspx?sourcedoc={616e24cd-5ac8-4cd0-829a-1513aa8e255b}&action=view&wd=target%28FAQ%27s.one%7Cc98e480d-80e6-48ee-b81a-0161e9341322%2FPole%20Requirements%7C46f6166a-97d7-40f4-904d-366f20efb7ea%2F%29">Pole Requirements</a> for types of poles and other questions</li>
+                      <li> For the most up to date procedures, please check the Team Book <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl">Residential Site Survey</a>
+                      <li> Click <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl">Pole Requirements</a> for types of poles and other questions</li>
 
 
                       </li>
