updated tripod options

--- a/index.html
+++ b/index.html
@@ -193,9 +193,10 @@
                               <input type="checkbox" id="atMesh" name="atMesh" autocomplete="off"><br>
                               <br><br>
                               <bold style="font-weight: bold;"> TriPod Options:</bold> <br><br>
-                              <label> <input type="radio" name="itTri" price="5.00" value="tri3">3' Tipod $5.00 </label>
-                              <label> <input type="radio" name="itTri" price="10.00" value="tri10"><font color="#ff8000">10' Tripod $10.00 </font></label>
-                              <label> <input type="radio" name="itTri" price="0.00" value="" checked id="atTriNa">N/A </label>
+                              <label> <input type="radio" name="itTri" price="5.00" value="tri10">Tripod 3 | 10' Pole </label><br>
+                              <label> <input type="radio" name="itTri" price="10.00" value="tri20"><font color="#ff8000">Tripod 3 | 20' Pole </font></label><br>
+                              <label> <input type="radio" name="itTri" price="10.00" value="triStandard">Standard Tripod </label><br>
+                              <label> <input type="radio" name="itTri" price="0.00" value="" checked id="atTriNa"><font color="#ff8000">N/A </font></label>
                           </div>
 
                           <br><br>
@@ -827,7 +828,7 @@
 
                   <ul>
 
-                      <li> For the most up to date procedures, please check the Team Book <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl">Residential Site Survey</a>
+                      <li> For the most up to date procedures, please check the Team Book <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl+9*6">Residential Site Survey</a>
                       <li> Click <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28Office%20Knowledge.one%7C3c418454-2383-4107-9ea4-e605719d98fc%2FFoyer%20Rules%7Ce626bfd7-b22d-4bc0-a468-1542ae3483ba%2F%29&wdorigin=NavigationUrl">Pole Requirements</a> for types of poles and other questions</li>
 
 
